Add details link in index view to show product details

--- a/Shopping/Views/Products/Details.cshtml
+++ b/Shopping/Views/Products/Details.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     var prd = (ProductModel) ViewData["Product"];
     ViewData["Title"] = "Search Result";
+    /*Layout = "_LayoutDesign";*/
 }
 
 @{
