--- a/Shopping/Views/Products/Index.cshtml
+++ b/Shopping/Views/Products/Index.cshtml
@@ -14,9 +14,10 @@
     {
         <tr>
                 <td>@prd.Id</td>
-                <td>@prd.Name</td>
+                <td><a href="/products/details/@prd.Id">@prd.Name</a></td>
                 <td>@prd.Price</td>
                 <td> <img src=@prd.img alt=@prd.Name height="100px"/></td>
+                
 
             </tr>
         <br/>
