--- a/Shopping/Views/Products/Index.cshtml
+++ b/Shopping/Views/Products/Index.cshtml
@@ -1,9 +1,10 @@
 ﻿@{
     var prds = (List<ProductModel>) ViewData["Products"];
     ViewData["Title"] = "Coffee";
+    var tcolor = (String) ViewData["tcolor"]; 
 }
 <h1>Coffes</h1>
- <table style="width:100%" class="table table-striped table-hover">
+ <table style="width:100%" class="table table-striped table-hover table-@tcolor">
             <tr>
                 <th>ID</th>
                 <th>Name</th>
